[tool.poetry]
name = "tele-muninn"
version = "0.1.1"
description = "Just like Alfred but using Telegram"
authors = ["Namuan <me@deskriders.dev>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/namuan/muninn"
repository = "https://github.com/namuan/muninn"
documentation = "https://tele-muninn.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/namuan/muninn/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.4"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.12.0"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^2.7.1"
Pygments = "^2.8.1"

[tool.poetry.scripts]
muninn = "tele_muninn.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tele_muninn"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
